# pelagic

./: .gitignore  .gitmodules  BUILDING.md  DIVE_COMPUTER_PROTOCOL_REFERENCE.md  README.md  build-release-macos.sh  build-release.ps1  dives.uddf  divesites_filtered.csv  fit_dump.txt  index.html  package-lock.json  package.json  todo.md  vite.config.ts
.github/workflows/: build-macos.yml
dive-computer-ts/: package-lock.json  package.json  tsconfig.json
dive-computer-ts/src/: connect-test.ts  index.ts  suunto-test.ts  test.ts
dive-computer-ts/src/descriptors/: descriptors.ts  index.ts
dive-computer-ts/src/discovery/: bluetooth-discovery.ts  index.ts  usb-discovery.ts
dive-computer-ts/src/download/: download-manager.ts  fingerprint-manager.ts  index.ts  remembered-devices.ts
dive-computer-ts/src/protocols/: base-protocol.ts  garmin.ts  heinrichs-weikamp.ts  index.ts  mares.ts  oceanic.ts  scubapro.ts  shearwater.ts  suunto-eonsteel-webhid.ts  suunto-eonsteel.ts  suunto-sbem-parser.ts
dive-computer-ts/src/transport/: ble.ts  bluetooth.ts  index.ts  serial.ts  transport.ts  usb-hid.ts
dive-computer-ts/src/types/: enums.ts  index.ts  interfaces.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/examples/: dump_exif.rs  dump_fit.rs  inspect_tanks.rs  migrate_nitrox.rs
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  archive.rs  backup.rs  biodiversity.rs  commands.rs  community.rs  db.rs  import.rs  inaturalist.rs  lib.rs  libdc.rs  main.rs  metadata.rs  photos.rs  sync_worker.rs  transport.rs  validation.rs  watcher.rs
src/components/: AddDiveModal.tsx  AddTripModal.css  AddTripModal.tsx  BatchOperationsModal.css  BatchOperationsModal.tsx  BulkEditDiveModal.css  BulkEditDiveModal.tsx  CommunityMap.css  CommunityMap.tsx  CommunityModal.css  CommunityModal.tsx  ContentArea.css  ContentArea.tsx  ContentGrid.css  ContentGrid.tsx  ContextMenu.css  ContextMenu.tsx  DeletePhotosConfirmModal.tsx  DiveComputerModal.css  DiveComputerModal.tsx  DiveImportReviewModal.css  DiveImportReviewModal.tsx  DiveModal.tsx  DiveProfile.css  DiveProfile.tsx  DiveSiteModal.css  DiveSiteModal.tsx  EquipmentModal.css  EquipmentModal.tsx  ExportModal.css  ExportModal.tsx  GeneralTagModal.tsx  Header.css  Header.tsx  ImageLoader.tsx  MapView.css  MapView.tsx  MigrationScreen.css  MigrationScreen.tsx  PhotoArchiveModal.css  (+31 more)
src/components/icons/: SocialIcons.tsx
src/hooks/: useCommunityAuth.ts  useCommunitySync.ts  useImageData.ts
src/stores/: dataStore.ts  index.ts  navigationStore.ts  searchStore.ts  selectionStore.ts  uiStore.ts
src/styles/: globals.css  layout.css
src/types/: index.ts  shareCard.ts
src/utils/: dialogs.ts  diveNames.ts  logger.ts  platform.ts  shareCardPresets.ts  shareCardRenderer.ts
tutorial/: 01-getting-started.md  02-importing-and-managing-dives.md  03-photos-and-tagging.md  04-gear-and-stats.md  05-community-and-export.md  README.md
