[package]
name = "pelagic"
version = "0.3.26"
description = "Dive photo manager for organizing underwater photography"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "pelagic_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }
cc = "1"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.0", features = [] }
tauri-plugin-log = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"

# XML parsing for .ssrf files
quick-xml = { version = "0.36", features = ["serialize"] }

# FIT file parsing (Garmin, Suunto, etc.)
fitparser = "0.10"

# Image processing
image = "0.25"

# RAW image processing (DNG, CR2, NEF, etc.) for thumbnail/viewing
rawloader = "0.37"
imagepipe = "0.5"
rawler = "0.7"  # Fallback decoder with CR3 support (from dnglab)

# EXIF metadata extraction
kamadak-exif = "0.5"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Directory paths
dirs = "5"

# Base64 encoding
base64 = "0.22"
rexif = "0.7.5"

# Temporary files
# tempfile removed — imports now parse from memory (no temp file roundtrip)

# HTTP client for AI API
reqwest = { version = "0.12", features = ["json", "multipart"] }

# Secure local storage for sensitive data
tauri-plugin-store = "2.0"

# Auto-updater & process (relaunch)
tauri-plugin-updater = "2.0"
tauri-plugin-process = "2.0"

# Filesystem watching (for detecting saved processed files from external editors)
notify = "7"

# Serial port I/O (for libdivecomputer serial transport)
serialport = "4"

# USB HID I/O (for libdivecomputer USB HID transport)
hidapi = "2"

# BLE I/O (for libdivecomputer Bluetooth Low Energy transport)
btleplug = "0.11"
tokio-stream = "0.1"
uuid = "1"

# URL encoding/parsing (citizen science APIs)
urlencoding = "2"
url = "2"

# Zip archive support (backup/restore)
zip = { version = "2", default-features = false, features = ["deflate"] }
